Make design responsive

--- a/MemberManagement/templates/base/devel.html
+++ b/MemberManagement/templates/base/devel.html
@@ -1,7 +1,7 @@
 {% if show_devel_warning %}
-    <div>
-        <div class="uk-alert-danger uk-width-1-1" uk-alert>
-            <p>Testing site do not use for real world purposes. </p>
-        </div>
-    </div>
+<div class="uk-alert-danger" uk-alert>
+    <p>
+        Testing site do not use for real world purposes. 
+    </p>
+</div>
 {% endif %}
