--- a/MemberManagement/templates/cookielaw/banner.html
+++ b/MemberManagement/templates/cookielaw/banner.html
@@ -1,6 +1,4 @@
-{% load i18n %}
-
-<div uk-alert id="CookielawBanner" class="uk-alert-primary">
+<div id="CookielawBanner" class="uk-alert uk-alert-primary">
     <h3>Cookies disclaimer</h3>
     <p>
             Our site saves small pieces of text information (cookies) on your device. 
