--- a/MemberManagement/templates/static/imprint.html
+++ b/MemberManagement/templates/static/imprint.html
@@ -1,7 +1,6 @@
 {% extends "base/base.html" %}
 
-{% block title %}Imprint / Impressum{% endblock %}
-
+{% block pagetitle %}{% block title %}Imprint / Impressum{% endblock %}{% endblock %}
 
 {% block content %}
 <p>
