--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -5,9 +5,141 @@
 {% block title %}Membership Data{% endblock %}
 
 {% block head %}
-    
-    <!-- Stripe Integration -->
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <!-- the styles -->
+    <link rel="stylesheet" href="{% static "css/payments/stripe.css" %}" type="text/css">
+{% endblock %}
+
+{% block pagetitle %}
+    {% if updating %}
+    <a href="{% url "view_payments" %}" class="uk-button uk-button-default uk-button-small">
+        <span uk-icon="icon: arrow-left"></span>
+        Back to Payment Information
+    </a>
+    {% endif %}
+    {{ title }}
+{% endblock %}
+
+{% block content %}
+    <div class="uk-text-lead">
+        <p>
+            All membership fees and donations go towards the non-profit purpose of the Association (see §3 of our
+            <a href="https://jacobs-alumni.de/charter/" target="_blank">charter</a>).
+        </p>
+
+        <p>
+            Your contributions make the Association an autonomous organization and help achieve our mission to make
+            a difference for our alma mater and
+            our growing global network.
+            In particular, you are supporting scholarships to Jacobs students and the many projects we have in our
+            pipeline!
+            Read more in our <a href="https://jacobs-alumni.de/faq/#q10" target="_blank">FAQs</a>. 
+        </p>
+
+        <p>
+                Alumni membership can be deducted from (German) taxes.
+                For donations below 200&euro; you do not need a donation receipt from us (see the <a href="https://www.gesetze-im-internet.de/estdv_1955/__50.html" target="_blank">applicable German law</a>), you can simply use your bank statement as proof. 
+        </p>
+        <p>
+            If you have any questions, or need to request donation receipts for amounts larger than 200&euro;, please drop us an e-mail at <a
+                href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
+        </p>
+    </div>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="uk-alert{% if message.tags %}-{{ message.tags }}{% endif %}" uk-alert>
+                <a class="uk-alert-close" uk-close></a>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    <div>
+        <form method="post" id="payment-form" class="uk-form-horizontal">
+            {% csrf_token %}
+
+            {{ form | as_uikit_form }}
+
+            <!-- Elements for Card -->
+            <div id="stripe-card-elements">
+                <label for="card-element" class="uk-form-label">
+                    Credit or debit card *
+                </label>
+                <div id="card-element" class="uk-form-controls uk-form-controls-text">
+                    <!-- a Stripe Element will be inserted here. -->
+                </div>
+            </div>
+
+            <!-- Elements for IBAN -->
+            <div id="stripe-iban-elements">
+
+                <div class="uk-form-controls uk-form-controls-text uk-alert-warning" uk-alert>
+                    By providing your IBAN and confirming this payment, you are authorizing Jacobs Alumni Association and Stripe, our payment service provider, to send instructions to your bank to debit your account and your bank to debit your account in accordance with those instructions. 
+                    You are entitled to a refund from your bank under the terms and conditions of your agreement with your bank. 
+                    A refund must be claimed within 8 weeks starting from the date on which your account was debited.
+                </div>
+                
+                <label for="iban" class="uk-form-label">
+                    IBAN *
+                </label>
+                <div id="iban-element" class="uk-form-controls uk-form-controls-text">
+                    <!-- a Stripe Element will be inserted here. -->
+                </div>
+
+                <label for="name" class="uk-form-label">
+                    Bank Account Owner *
+                </label>
+                <div id="sepa-element" class="uk-form-controls uk-form-controls-text">
+                    <input id="name" class="StripeElement uk-stripe-element" placeholder="Your Name"/>
+                </div>
+            </div>
+
+            <!-- Used to display form errors -->
+            <div role="alert" class="uk-form-controls uk-form-controls-text">
+                <div class="uk-alert-danger" id="card-errors" uk-alert>
+                    You need to enable JavaScript for this to work.
+                </div>
+                <p>
+                    Your payment info is sent directly to <a href="https://stripe.com/" target="_blank">Stripe</a> via your browser
+                    and never reaches Jacobs Alumni Servers.
+                    <!-- TODO: Stripe Logo -->
+                </p>
+            </div>
+
+            <div>
+                <div class="uk-form-controls uk-form-controls-text">
+                    <ul>
+                        <li>
+                            Your payment will be due immediately and recurring annually.
+                        </li>
+                        <li>
+                            The system will notify you before any further payments are due.
+                        </li>
+                        <li>
+                            You can always change your membership in the membership portal.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            {% if stripe_test_mode %}
+            <div class="uk-text-lead">
+                <div class="uk-alert-danger" uk-alert>
+                    <p>
+                        Stripe is in testing mode and no real charges will be made. <br>
+                        Using real payment data is not possible in this mode. 
+                        Instead make use of <a target="_blank" href="https://stripe.com/docs/testing">Testing Card or SEPA numbers</a>. 
+                    </p>
+                </div>
+            </div>
+            {% endif %}
+
+            <button class="uk-button uk-button-primary">{{ next_text }}</button>
+        </form>
+    </div>
+{% endblock %}
+{% block scripts %}
+    {{ block.super }}
     <script src="https://js.stripe.com/v3/"></script>
     <script src="{% static "js/payments/subscribe.js" %}" type="text/javascript"></script>
     <script type="text/javascript">
@@ -15,139 +147,4 @@
             stripe_integration_init('{{ stripe_publishable_key }}');
         }
     </script>
-    
-    <!-- the styles -->
-    <link rel="stylesheet" href="{% static "css/payments/stripe.css" %}" type="text/css">
-{% endblock %}
-
-{% block content %}
-    <article class="uk-article">
-        <h1 class="uk-article-title">
-            {% if updating %}
-                <a href="{% url "view_payments" %}" class="uk-button uk-button-default uk-button-small">
-                    <span uk-icon="icon: arrow-left"></span>
-                    Back to Payment Information
-                </a>
-            {% endif %}
-            {{ title }}
-        </h1>
-
-        <div class="uk-text-lead">
-            <p>
-                All membership fees and donations go towards the non-profit purpose of the Association (see §3 of our
-                <a href="https://jacobs-alumni.de/charter/" target="_blank">charter</a>).
-            </p>
-
-            <p>
-                Your contributions make the Association an autonomous organization and help achieve our mission to make
-                a difference for our alma mater and
-                our growing global network.
-                In particular, you are supporting scholarships to Jacobs students and the many projects we have in our
-                pipeline!
-                Read more in our <a href="https://jacobs-alumni.de/faq/#q10" target="_blank">FAQs</a>. 
-            </p>
-
-            <p>
-                    Alumni membership can be deducted from (German) taxes.
-                    For donations below 200&euro; you do not need a donation receipt from us (see the <a href="https://www.gesetze-im-internet.de/estdv_1955/__50.html" target="_blank">applicable German law</a>), you can simply use your bank statement as proof. 
-            </p>
-            <p>
-                If you have any questions, or need to request donation receipts for amounts larger than 200&euro;, please drop us an e-mail at <a
-                    href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
-            </p>
-        </div>
-
-        {% if messages %}
-            {% for message in messages %}
-                <div class="uk-alert{% if message.tags %}-{{ message.tags }}{% endif %}" uk-alert>
-                    <a class="uk-alert-close" uk-close></a>
-                    <p>{{ message }}</p>
-                </div>
-            {% endfor %}
-        {% endif %}
-
-        <div>
-            <form method="post" id="payment-form" class="uk-form-horizontal">
-                {% csrf_token %}
-
-                {{ form | as_uikit_form }}
-
-                <!-- Elements for Card -->
-                <div id="stripe-card-elements">
-                    <label for="card-element" class="uk-form-label">
-                        Credit or debit card *
-                    </label>
-                    <div id="card-element" class="uk-form-controls uk-form-controls-text">
-                        <!-- a Stripe Element will be inserted here. -->
-                    </div>
-                </div>
-
-                <!-- Elements for IBAN -->
-                <div id="stripe-iban-elements">
-
-                    <div class="uk-form-controls uk-form-controls-text uk-alert-warning" uk-alert>
-                        By providing your IBAN and confirming this payment, you are authorizing Jacobs Alumni Association and Stripe, our payment service provider, to send instructions to your bank to debit your account and your bank to debit your account in accordance with those instructions. 
-                        You are entitled to a refund from your bank under the terms and conditions of your agreement with your bank. 
-                        A refund must be claimed within 8 weeks starting from the date on which your account was debited.
-                    </div>
-                    
-                    <label for="iban" class="uk-form-label">
-                        IBAN *
-                    </label>
-                    <div id="iban-element" class="uk-form-controls uk-form-controls-text">
-                        <!-- a Stripe Element will be inserted here. -->
-                    </div>
-
-                    <label for="name" class="uk-form-label">
-                        Bank Account Owner *
-                    </label>
-                    <div id="sepa-element" class="uk-form-controls uk-form-controls-text">
-                        <input id="name" class="StripeElement uk-stripe-element" placeholder="Your Name"/>
-                    </div>
-                </div>
-
-                <!-- Used to display form errors -->
-                <div role="alert" class="uk-form-controls uk-form-controls-text">
-                    <div class="uk-alert-danger" id="card-errors" uk-alert>
-                        You need to enable JavaScript for this to work.
-                    </div>
-                    <p>
-                        Your payment info is sent directly to <a href="https://stripe.com/" target="_blank">Stripe</a> via your browser
-                        and never reaches Jacobs Alumni Servers.
-                        <!-- TODO: Stripe Logo -->
-                    </p>
-                </div>
-
-                <div>
-                    <div class="uk-form-controls uk-form-controls-text">
-                        <ul>
-                            <li>
-                                Your payment will be due immediately and recurring annually.
-                            </li>
-                            <li>
-                                The system will notify you before any further payments are due.
-                            </li>
-                            <li>
-                                You can always change your membership in the membership portal.
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                {% if stripe_test_mode %}
-                <div class="uk-text-lead">
-                    <div class="uk-alert-danger" uk-alert>
-                        <p>
-                            Stripe is in testing mode and no real charges will be made. <br>
-                            Using real payment data is not possible in this mode. 
-                            Instead make use of <a target="_blank" href="https://stripe.com/docs/testing">Testing Card or SEPA numbers</a>. 
-                        </p>
-                    </div>
-                </div>
-                {% endif %}
-
-                <button class="uk-button uk-button-primary">{{ next_text }}</button>
-            </form>
-        </div>
-    </article>
 {% endblock %}
