--- a/registry/templates/setup/completed.html
+++ b/registry/templates/setup/completed.html
@@ -2,14 +2,14 @@
 
 {% block extracontent %}
 <div class="uk-text-lead">
-    You have completed the registration process. <br />
+    You have completed filling out the Jacobs Alumni Membership Form. <br />
 
-    You can now use the portal to view and update your data. <br />
+    Once you click the button below to finalize your application you will be able to use the portal to view and update your data. <br />
 
-    In the meantime we will be reviewing your application. <br />
+    We will then start reviewing your application. <br />
 
-    If you are an existing member, we will connect your updated account to your existing Google account to finalize the registration. <br />
+    If you are a new member, we will create your Google account and get back to you with further details. <br />
 
-    If you are a new member, we will create your Google account and get back to you with further details.
+    If you are an existing member, we will connect your updated account to your existing Google account.
 </div>
 {% endblock %}
