--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -13,8 +13,7 @@
         <meta name="description" content="The Jacobs Alumni Association is the growing network of former Jacobs University students and friends." />
         <meta name="keywords" content="Jacobs Alumni Association, Jacobs University Bremen, Jacobs University, Alumni Association, Jacobs, Alumni, Association, Bremen" />
 
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" />
-        <link href="{% static "uikit/css/style.css" %}" rel="stylesheet" />
+        <link href="{% static "uikit/css/style.min.css" %}" rel="stylesheet" />
 
         {% if google_analytics_id %}
         <script async src="https://www.googletagmanager.com/gtag/js?id={{google_analytics_id}}"></script>
@@ -31,33 +30,33 @@
         {% endblock %}
     </head>
     <body {% block bodyattr %}{% endblock %}>
-        <div class="fill uk-offcanvas-content">
-            {% block header %}
-                {% include "base/header.html" %}
-            {% endblock %}
 
-
-            <div class="main-container uk-padding header-top-margin">
+        {% block header %}
+            {% include "base/header.html" %}
+        {% endblock %}
+        
+        <div class="uk-container main-container">
                 {% cookielaw_banner %}
                 
                 {% include "base/devel.html" %}
-
-                {% block content %}
-                {% endblock %}
-            </div>
+                
+                <article class="uk-article">
+                    <h1 class="uk-article-title">{% block pagetitle %}{% endblock %}</h1>
+                    {% block content %}
+                    {% endblock %}
+                </article>
         </div>
-
-        <div class="uk-offcanvas-content">
-            {% block footer %}
-                {% include "base/footer.html" %}
-            {% endblock %}
-        </div>
+        
+        {% block footer %}
+            {% include "base/footer.html" %}
+        {% endblock %}
 
         {% block scripts %}
-            <script src="{% static "cookielaw/js/cookielaw.js" %}"></script>
             <script src="{% static "nodep-date-input-polyfill/nodep-date-input-polyfill.dist.js" %}"></script>
-            <script src="{% static "uikit/js/uikit.js" %}" type="text/javascript"></script>
-            <script src="{% static "uikit/js/uikit-icons.js" %}" type="text/javascript"></script>
+            <script src="{% static "jquery/js/jquery-3.3.1.min.js" %}"></script>
+            <script src="{% static "cookielaw/js/cookielaw.js" %}"></script>
+            <script src="{% static "uikit/js/uikit.min.js" %}" type="text/javascript"></script>
+            <script src="{% static "uikit/js/uikit-icons.min.js" %}" type="text/javascript"></script>
         {% endblock %}
     </body>
 </html>
