--- a/MemberManagement/templates/static/index.html
+++ b/MemberManagement/templates/static/index.html
@@ -1,82 +1,76 @@
 {% extends "base/base.html" %}
 
 {% block title %}Home{% endblock %}
+{% block pagetitle %}Join the Jacobs Alumni Association e.V{% endblock %}
 
 {% block content %}
-<article class="uk-article">
-    <h1 class="uk-article-title">
-        Join the Jacobs Alumni Association e.V
-    </h1>
+<div class="uk-clearfix">
+    <p class="uk-text-lead">
+        In order to become a member of the Association, you need to provide some personal information about yourself, which will require about 10 minutes of your time.
+    </p>
 
-    <div>
-        <p class="uk-text-lead">
-            In order to become a member of the Association, you need to provide some personal information about yourself, which will require about 10 minutes of your time.
-        </p>
+    <p>
+        If you are an existing member, please use this opportunity to update your data and enable the recurring payment of the membership fees.
+        The registration process will feel like a new application but rest assured that your Jacobs Alumni Google account remains intact.
+    </p>
 
-        <p>
-            If you are an existing member, please use this opportunity to update your data and enable the recurring payment of the membership fees.
-            The registration process will feel like a new application but rest assured that your Jacobs Alumni Google account remains intact.
-        </p>
+    <div class="uk-margin uk-button-group">
+        <a href="{% url 'register' %}" class="uk-button uk-button-primary">
+            Register
+        </a>
 
-        <div class="uk-margin uk-button-group">
-            <a href="{% url 'register' %}" class="uk-button uk-button-primary">
-                Register
-            </a>
-
-            <a href="{% url 'login' %}" class="uk-button uk-button-secondary">
-                Login
-            </a>
-        </div>
-
-        <p>
-            Your @jacobs-alumni.de email account is hosted on G Suite and comes with access to various apps as well as unlimited Google Drive space.
-        </p>
-        <p>
-            Additionally, as a member you will enjoy the following benefits:
-            <ul>
-                <li>
-                    Voting rights in the General Assembly of the Jacobs Alumni Association.
-                </li>
-                <li>
-                    Eligibility as a mentee or mentor for 1 year mentoring program.
-                </li>
-                <li>
-                    Access to Career Counselling Services.
-                </li>
-                <li>
-                    Free access to career seminars and workshops (on campus).
-                </li>
-                <li>
-                    Jacobs Career Fair: Free Silver Package (worth 850€) for own start-ups and spin-off companies.
-                </li>
-                <li>
-                    Career Services for Alumni Employers: 20% discount on Presentations, Recruiting Events, Workshops, Employer Interviews and Pre-Selection.
-                </li>
-                <li>
-                    Alumni Newsletter to stay up-to-date on all Alumni and University developments
-                </li>
-                <li>
-                    More to come!
-                </li>
-            </ul>
-        </p>
-
-        <p>
-            You can choose one of the three membership tiers at the end of the registration process:
-
-            <ul>
-                <li>
-                    Contributor – Standard membership for 39€ p.a.
-                </li>
-                <li>
-                    Starter – Membership for fresh graduates (or those not ready to financially contribute) for free
-                </li>
-                <li>
-                    Patron – Premium membership (incl. additional benefits) for 249€ p.a.
-                </li>
-            </ul>
-        </p>
-
+        <a href="{% url 'login' %}" class="uk-button uk-button-secondary">
+            Login
+        </a>
     </div>
-</article>
+
+    <p>
+        Your @jacobs-alumni.de email account is hosted on G Suite and comes with access to various apps as well as unlimited Google Drive space.
+    </p>
+    <p>
+        Additionally, as a member you will enjoy the following benefits:
+        <ul>
+            <li>
+                Voting rights in the General Assembly of the Jacobs Alumni Association.
+            </li>
+            <li>
+                Eligibility as a mentee or mentor for 1 year mentoring program.
+            </li>
+            <li>
+                Access to Career Counselling Services.
+            </li>
+            <li>
+                Free access to career seminars and workshops (on campus).
+            </li>
+            <li>
+                Jacobs Career Fair: Free Silver Package (worth 850€) for own start-ups and spin-off companies.
+            </li>
+            <li>
+                Career Services for Alumni Employers: 20% discount on Presentations, Recruiting Events, Workshops, Employer Interviews and Pre-Selection.
+            </li>
+            <li>
+                Alumni Newsletter to stay up-to-date on all Alumni and University developments
+            </li>
+            <li>
+                More to come!
+            </li>
+        </ul>
+    </p>
+
+    <p>
+        You can choose one of the three membership tiers at the end of the registration process:
+
+        <ul>
+            <li>
+                Contributor – Standard membership for 39€ p.a.
+            </li>
+            <li>
+                Starter – Membership for fresh graduates (or those not ready to financially contribute) for free
+            </li>
+            <li>
+                Patron – Premium membership (incl. additional benefits) for 249€ p.a.
+            </li>
+        </ul>
+    </p>
+</div>
 {% endblock %}
