--- a/atlas/templates/atlas/index.html
+++ b/atlas/templates/atlas/index.html
@@ -3,7 +3,7 @@
 {% load registry_display %}
 
 {% block title %}Atlas{% endblock %}
-
+{% block pagetitle %}Jacobs Alumni Atlas{% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
@@ -16,86 +16,82 @@
 </style>
 {% endblock %}
 
+
+
 {% block content %}
-<article class="uk-article">
-    <h1 class="uk-article-title">
-        Jacobs Alumni Atlas
-    </h1>
+{% include "atlas/search_form.html" %}
 
-    {% include "atlas/search_form.html" %}
-
-    <p>
-        <div id="map" class="map"></div>
-    </p>
+<p>
+    <div id="map" class="map"></div>
+</p>
 
 
-    <script>
-        // get coordinates and features
-        var coords = {{people_coords}};
-        var features = coords.map(function(p) {
-            return new ol.Feature(
-                new ol.geom.Point(
-                    ol.proj.fromLonLat([p[1], p[0]])
-                )
+<script>
+    // get coordinates and features
+    var coords = {{people_coords}};
+    var features = coords.map(function(p) {
+        return new ol.Feature(
+            new ol.geom.Point(
+                ol.proj.fromLonLat([p[1], p[0]])
             )
-        });
+        )
+    });
 
-        // create a source from it
-        var source = new ol.source.Vector({
-            features: features
-        });
+    // create a source from it
+    var source = new ol.source.Vector({
+        features: features
+    });
 
-        // create a cluster from this source
-        var clusterSource = new ol.source.Cluster({
-            distance: 40,
-            source: source
-        });
+    // create a cluster from this source
+    var clusterSource = new ol.source.Cluster({
+        distance: 40,
+        source: source
+    });
 
-        // cached style computation for different sizes
-        var styleCache = {};
+    // cached style computation for different sizes
+    var styleCache = {};
 
-        // create some clusters
-        var clusters = new ol.layer.Vector({
-            source: clusterSource,
-            style: function(feature) {
-                var size = feature.get('features').length;
-                return new ol.style.Style({
-                    image: new ol.style.Circle({
-                        radius: 10,
-                        stroke: new ol.style.Stroke({
-                            color: '#fff'
-                        }),
-                        fill: new ol.style.Fill({
-                            color: '#3399CC'
-                        })
+    // create some clusters
+    var clusters = new ol.layer.Vector({
+        source: clusterSource,
+        style: function(feature) {
+            var size = feature.get('features').length;
+            return new ol.style.Style({
+                image: new ol.style.Circle({
+                    radius: 10,
+                    stroke: new ol.style.Stroke({
+                        color: '#fff'
                     }),
-                    text: new ol.style.Text({
-                        text: size.toString(),
-                        fill: new ol.style.Fill({
-                            color: '#fff'
-                        })
+                    fill: new ol.style.Fill({
+                        color: '#3399CC'
                     })
-                });
-            }
-        });
+                }),
+                text: new ol.style.Text({
+                    text: size.toString(),
+                    fill: new ol.style.Fill({
+                        color: '#fff'
+                    })
+                })
+            });
+        }
+    });
 
-        // the source for all the images is OpenStreetMap
-        var raster = new ol.layer.Tile({
-            source: new ol.source.OSM()
-        });
+    // the source for all the images is OpenStreetMap
+    var raster = new ol.layer.Tile({
+        source: new ol.source.OSM()
+    });
 
-        // finally: create a map
-        var map = new ol.Map({
-            layers: [raster, clusters],
-            controls: ol.control.defaults().extend([
-               new ol.control.FullScreen() 
-            ]),
-            target: 'map',
-            view: new ol.View({
-                center: [0, 0],
-                zoom: 2
-            })
-        });
-    </script>
-</article>
+    // finally: create a map
+    var map = new ol.Map({
+        layers: [raster, clusters],
+        controls: ol.control.defaults().extend([
+            new ol.control.FullScreen() 
+        ]),
+        target: 'map',
+        view: new ol.View({
+            center: [0, 0],
+            zoom: 2
+        })
+    });
+</script>
 {% endblock %}
