--- a/atlas/templates/atlas/search_form.html
+++ b/atlas/templates/atlas/search_form.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div class="uk-width-2-5 uk-button-group">
+            <div class="uk-width-2-5@m uk-button-group">
                 <!-- Search -->
                 <button type="submit" class="uk-input uk-button uk-button-primary">
                     Search
