--- a/custom_auth/templates/auth/token_login.html
+++ b/custom_auth/templates/auth/token_login.html
@@ -15,22 +15,22 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 {% endblock %}
 
+{% block pagetitle %}
+Magic Login
+{% endblock %}
+
 {% block content %}
-<article class="uk-article">
-    <h1 id="page-header" class="uk-article-title">Magic Login</h1>
+<div>
+    <form method='POST' id="token_form">
+        <input type="hidden" name="token" value="{{ token }}">
+        <input type="hidden" name="next" value="{{ next }}">
+        {% csrf_token %}
+    </form>
 
-    <div>
-        <form method='POST' id="token_form">
-            <input type="hidden" name="token" value="{{ token }}">
-            <input type="hidden" name="next" value="{{ next }}">
-            {% csrf_token %}
-        </form>
-
-        {% if error %}
-        <div class="uk-alert-danger" uk-alert class="uk-width-1-1">    
-            <p>We could not log you in. <a href="{% url 'login' %}">Try Again</a></p>
-        </div>
-        {% endif %}
+    {% if error %}
+    <div class="uk-alert-danger" uk-alert class="uk-width-1-1">    
+        <p>We could not log you in. <a href="{% url 'login' %}">Try Again</a></p>
     </div>
-</article>
+    {% endif %}
+</div>
 {% endblock %}
