--- a/django_forms_uikit/templates/uikit/field.html
+++ b/django_forms_uikit/templates/uikit/field.html
@@ -9,6 +9,16 @@
                 {{ field.label|safe }} {% if field.field.required %}*{% endif %}
             </label>
         {% endif %}
+        
+        <div class="uk-form-controls-text uk-hidden@m">
+            {% include "uikit/_field_errors.html" %}
+            {% if field|css_class == 'checkboxinput' %}
+                <p></p>
+            {% else %}
+                <p>{{ field.help_text|safe }}</p>
+            {% endif %}
+        </div>
+        
 
         {% if field|css_class == 'checkboxinput' %}
             <div class="uk-form-controls uk-form-controls-text">
@@ -16,19 +26,24 @@
                 {{ field.help_text|safe }}
             </div>
 
-            <div class="uk-form-controls uk-form-controls-text">
+            <div class="uk-form-controls uk-form-controls-text uk-visible@m">
                 {% include "uikit/_field_errors.html" %}
                 <p></p>
             </div>
         {% else %}
+        
             <div class="uk-form-controls uk-form-controls-text">
                 {{ field|safe }}
             </div>
 
-            <div class="uk-form-controls uk-form-controls-text">
+            <div class="uk-form-controls uk-form-controls-text uk-visible@m">
                 {% include "uikit/_field_errors.html" %}
                 <p>{{ field.help_text|safe }}</p>
             </div>
         {% endif %}
+
+        <div class="uk-form-label uk-hidden@m">
+            <br />
+        </div>
     </div>
 {% endif %}
