--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -1,57 +1,60 @@
 {% extends "base/base.html" %}
 
 {% block title %}Portal{% endblock %}
+{% block pagetitle %}Jacobs Alumni Membership Portal{% endblock %} 
 
 {% block content %}
-<article class="uk-article">
-    <h1 class="uk-article-title">
-        Jacobs Alumni Membership Portal
-    </h1>
+<p class="uk-article-lead">
+    Welcome to the membership portal of the Jacobs University Bremen Alumni organisation.
+    This is where you can view and edit your membership information.
+</p>
 
-    <p class="uk-article-lead">
-        Welcome to the membership portal of the Jacobs University Bremen Alumni organisation.
-        This is where you can view and edit your membership information.
-    </p>
+{% include "portal/approval_warning.html" %}
+{% include "portal/announcements.html" %}
 
-    {% include "portal/approval_warning.html" %}
-    {% include "portal/announcements.html" %}
+<div class="uk-grid uk-child-width-1-2@m">
 
-    <div data-uk-grid>
-
-        <div class="uk-width-1-2">
-            {% include "portal/parts/general.html" %}
+    <div>
+        {% include "portal/parts/general.html" %}
+        <div><br /></div>
+    </div>
+    <div>
+        <div>
+            {% include "portal/parts/account.html" %}
         </div>
-        <div class="uk-width-1-2">
-            <div>
-                {% include "portal/parts/account.html" %}
-            </div>
-            <br /><br />
-            <div>
-                {% include "portal/parts/atlas.html" %}
-            </div>
+        <div><br /></div>
+        
+        <div>
+            {% include "portal/parts/atlas.html" %}
         </div>
-
-        <div class="uk-width-1-2">
-            {% include "portal/parts/address.html" %}
-        </div>
-        <div class="uk-width-1-2">
-            {% include "portal/parts/jacobs.html" %}
-        </div>
-
-        <div class="uk-width-1-2">
-            {% include "portal/parts/social.html" %}
-        </div>
-        <div class="uk-width-1-2">
-            {% include "portal/parts/job.html" %}
-        </div>
-
-        <div class="uk-width-1-2">
-            {% include "portal/parts/skills.html" %}
-        </div>
-        <div class="uk-width-1-2">
-            {% include "portal/parts/payment.html" %}
-        </div>
+        <div><br/></div>
     </div>
 
-</article>
+    <div>
+        {% include "portal/parts/address.html" %}
+        <div><br/></div>
+    </div>
+    <div>
+        {% include "portal/parts/jacobs.html" %}
+        <div><br/></div>
+    </div>
+
+    <div>
+        {% include "portal/parts/social.html" %}
+        <div><br/></div>
+    </div>
+    <div>
+        {% include "portal/parts/job.html" %}
+        <div><br/></div>
+    </div>
+
+    <div>
+        {% include "portal/parts/skills.html" %}
+        <div><br/></div>
+    </div>
+    <div>
+        {% include "portal/parts/payment.html" %}
+        <div><br/></div>
+    </div>
+</div>
 {% endblock %}
