--- a/registry/templates/setup/setup.html
+++ b/registry/templates/setup/setup.html
@@ -3,22 +3,20 @@
 
 {% block title %}{{ title }}{% endblock %}
 
-{% block content %}
-<article class="uk-article">
-    <h1 class="uk-article-title">
-        {{ title }}
-        {% if subtitle %}
-            <span class="uk-text-muted"> - {{ subtitle }}</span>
-        {% endif %}
-    </h1>
+{% block pagetitle %}
+{{ title }}
+{% if subtitle %}
+    <span class="uk-text-muted"> - {{ subtitle }}</span>
+{% endif %}
+{% endblock %}
 
-    <div>
-        <form class="uk-form-horizontal" method="POST">
-            {% csrf_token %}
-            {{ form | as_uikit_form }}
-            {% block extracontent %}{% endblock %}
-            <input type="submit" id="input_id_submit" class="uk-button uk-button-primary" value="{{ next_text }}">
-        </form>
-    </div>
-</article>
+{% block content %}
+<div>
+    <form class="uk-form-horizontal" method="POST">
+        {% csrf_token %}
+        {{ form | as_uikit_form }}
+        {% block extracontent %}{% endblock %}
+        <input type="submit" id="input_id_submit" class="uk-button uk-button-primary" value="{{ next_text }}">
+    </form>
+</div>
 {% endblock %}
